syntax = "proto3";

package ovms_ipc;

message EndpointRequest{
    oneof type{
        PredictRequest predict_request = 1;
        ModelMetadataRequest model_metadata_request = 2;
        ModelStatusRequest model_status_request = 3;
    }
}

message EndpointResponse{
    oneof type{
        PredictResponse predict_response = 1;
        ModelMetadataResponse model_metadata_response = 2;
        ModelStatusResponse model_status_response = 3;
        ErrorResponse error_response = 4;
    }
}

message PredictRequest{
    message Data{
        string input_name = 1;
        string shm_name = 2;
    }
    enum DataType{
        NUMPY = 0;
        STRING = 2;
        BINARY = 3;
    }
    DataType data_type = 1;
    repeated Data inputs = 2;
    string return_socket_name = 3;
}

message PredictResponse{
    message Data{
        string output_name = 1;
        string shm_name = 2;
    }
    repeated Data outputs = 1;
}

message ModelMetadataRequest{
    int32 requested_version = 1;
}

message ModelMetadataResponse{
    message Layer{
        string layer_name = 1;
        string precision = 2;
        repeated int32 shape = 3;
    }
    message Signature{
        string name = 1;
        Layer layer = 2;
    }
    repeated Signature inputs_signature = 1;
    repeated Signature outputs_signature = 2;
    string method_name = 3;
}

message ModelStatusRequest{
    int32 requested_version = 1;
}

message ModelStatusResponse{
    enum State{
        START = 0;
        LOADING = 1;
        AVAILABLE = 2;
        UNLOADING = 3;
        END = 4;
    }
    message Status{
        enum ErrorCode{
            OK = 0;
            UNKNOWN = 1;
        }
        ErrorCode error_code = 1;
        string error_message = 2;
    }
    message ModelVersionStatus{
        string model_name = 1;
        int32 model_version = 2;
        State state = 3;
        Status status = 4;
    }
}

message ErrorResponse{
    string error_message = 1;
}


